--- a/src/web_server/static/index.html
+++ b/src/web_server/static/index.html
@@ -4,38 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CNC Control</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <title>CNC Web Control</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>CNC Machine Control</h1>
-        <div class="card">
-            <h2>Bounds Test</h2>
-            <p>Click below to run the full Bounds Test sequence.</p>
-            <p class="warning">Ensure the machine is at the Origin (0,0,0) before starting.</p>
-            <button id="connectBtn" class="btn">Connect & Run Test</button>
-            <div id="status" class="status-box"></div>
-        </div>
+        <header>
+            <h1>CNC Controller</h1>
+            <div id="status-badge" class="badge disconnected">Disconnected</div>
+        </header>
 
-        <div class="card" style="margin-top: 20px;">
+        <section class="control-panel">
+            <button id="btn-connect" class="primary-btn">Connect Machine</button>
+            <div id="connection-log" class="log-text"></div>
+        </section>
+
+        <section class="control-panel" id="jog-panel">
             <h2>Manual Control</h2>
-            <p>Enter coordinates (negative values indicate travel from origin).</p>
-            <div class="input-group">
-                <label>X: <input type="number" id="x-input" value="0" step="1" max="0"></label>
+            <div class="grid-form">
+                <div class="input-group">
+                    <label>X (mm)</label>
+                    <input type="number" id="input-x" value="0" step="1">
+                </div>
+                <div class="input-group">
+                    <label>Y (mm)</label>
+                    <input type="number" id="input-y" value="0" step="1">
+                </div>
+                <div class="input-group">
+                    <label>Z (mm)</label>
+                    <input type="number" id="input-z" value="-5" step="0.5">
+                </div>
             </div>
-            <div class="input-group">
-                <label>Y: <input type="number" id="y-input" value="0" step="1" max="0"></label>
-            </div>
-            <div class="input-group">
-                <label>Z: <input type="number" id="z-input" value="0" step="1" max="0"></label>
-            </div>
-            <button id="moveBtn" class="btn">Move to Coordinates</button>
-            <div id="move-status" class="status-box"></div>
-        </div>
+            <button id="btn-move" class="action-btn" disabled>MOVE TO TARGET</button>
+            <div id="move-log" class="log-text"></div>
+        </section>
+
+        <section class="info-panel">
+            <p class="small-text">Status: <span id="server-status">Polling...</span></p>
+        </section>
     </div>
-    <script src="/static/app.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
